--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ img {
     padding: 4rem 2rem;
     box-sizing: border-box; /* Include padding nel calcolo dell'altezza */
     text-align: center;
-    border-bottom: 1px solid #d8dccf; /* Sottile separatore tra slide */
+    /*border-bottom: 1px solid #d8dccf; /* Sottile separatore tra slide */
 }
 
 /* Layout a due colonne */
@@ -428,3 +428,4 @@ img {
         margin-top: 0;
     }
 }
+
